<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_user_login">Already a user? Login</string>
    <string name="new_to_instagram_register">New to Instagram? Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="search">Search...</string>
    <string name="full_name">Full Name</string>
    <string name="following">FOLLOWING</string>
    <string name="chirag">Chirag</string>
    <string name="posts">POSTS</string>
    <string name="followers">FOLLOWERS</string>
    <string name="edit_profile">Edit Profile</string>


</resources>